# VLLM-HunyuanOCR

./: Dockerfile  README.md  client_example.py  docker-compose.yml  pyproject.toml  requirements-client.txt
clients/dotnet/: HunyuanOCR.Client.sln
clients/dotnet/HunyuanOCR.Client/: HunyuanOCR.Client.csproj  HunyuanOCRClient.cs  HunyuanOCRClientSync.cs
clients/dotnet/HunyuanOCR.Client/Internal/: ApiModels.cs
clients/dotnet/HunyuanOCR.Client/Models/: HunyuanOCRConfig.cs  OCRPromptType.cs  OCRResult.cs  ServerStatus.cs
clients/python/: pyproject.toml  requirements.txt
clients/python/hunyuan_ocr_client/: __init__.py
frontend/: Dockerfile  main.py  requirements.txt
frontend/static/: index.html
hunyuan_ocr/: __init__.py  client.py  manager.py
watchdog/: Dockerfile  idle_shutdown.py  proxy.py
