[project]
name = "hunyuan-ocr"
version = "0.1.0"
description = "HunyuanOCR client library with VRAM management"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hunyuan_ocr"]

[tool.ruff]
target-version = "py310"
line-length = 100

