[project]
name = "hunyuan-ocr-client"
version = "0.1.0"
description = "Python client for HunyuanOCR API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hunyuan_ocr_client"]

